# gitmore

./: .gitignore  LICENSE  README.md  SKILL.md  add-claude-skill.sh  install.sh  pyproject.toml  uninstall.sh
gitmore/: __init__.py  __main__.py  add_partial.py
tests/: test_add_partial.py
