[project]
name = "gitmore"
version = "0.1.0"
description = "Git utilities for AI agents and humans"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
gitmore = "gitmore:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitmore"]

[tool.pytest.ini_options]
addopts = "--cov=gitmore --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
]
